# Social-media-automation

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  start.sh
config/identities/: XHS_01.yaml  XHS_02.yaml  XHS_03.yaml
config/sensitive_words/: common.yaml  finance.yaml
data/checkpoints/XHS_01/2026-03-29/: research.json
docs/: BACKLOG.md  architecture-diagram.md  architecture.md  getting-started.md  requirements.md  xhs-cli-integration-design.md
scripts/: start_scheduler.sh  test_azure_openai.py
src/: __init__.py  __main__.py  main.py
src/graph/: state.py  workflow.py
src/infra/: __init__.py  browser_pool.py  identity_registry.py  image_gen.py  logger.py  model_adapter.py  xhs_cli.py  xhs_cli_types.py
src/nodes/: __init__.py  analyst.py  context_loader.py  creative_engine.py  execution.py  feedback.py  monitor.py  research_engine.py  review_gate.py  safety_check.py  social_interaction.py
src/publishers/: __init__.py  base.py  douyin.py  factory.py  wechat.py  xiaohongshu.py
src/scheduler/: __init__.py  daily_scheduler.py  monitor_worker.py  social_worker.py  task_creator.py
tests/: conftest.py  test_context_loader.py  test_image_gen.py  test_publishers.py  test_research_engine.py  test_review_gate.py  test_safety_check.py  test_scheduler.py  test_xhs_cli.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/accounts/: page.tsx
web/app/tasks/: page.tsx
web/components/: sidebar.tsx  status-badge.tsx
web/lib/: db.ts  types.ts  workflow.ts  yaml-utils.ts
web/scripts/: migrate-db.ts
(+23 files in other folders)
